# cognitext-app

./: CONTRIBUTING.md  README.md  TODOS.md  package.json  pnpm-lock.yaml  settings.html
docs/: DevNotes.md
src/: App.css  App.tsx  FolderTree.tsx  MainLayout.tsx  Setting.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs
src/common/: http.ts  index.tsx  utils.ts
src/components/: Copilot.tsx  DebounceSelect.tsx  FolderTree.tsx  FullTextSearch.tsx  MainLayout.tsx  SearchBar.tsx  Side.tsx  TableOfContentsList.tsx  TreeTitle.tsx
src/components/custom-scroll/: CustomScroll.tsx  utils.ts
src/components/react-split-pane-next/: Pane.tsx  Resizer.tsx  SplitPane.tsx  utils.ts
src/editor/: Editor.tsx  EditorProvider.tsx  MarkdownEditor.tsx  Settings.tsx  appSettings.ts  index.css
src/editor/context/: EditorSettingsContext.tsx  FileContext.tsx  SettingsContext.tsx  SharedHistoryContext.tsx  ToolbarContext.tsx
src/editor/hooks/: useModal.tsx
src/editor/nodes/: AutocompleteNode.tsx  EquationComponent.tsx  EquationNode.tsx  FigmaNode.tsx  ImageComponent.tsx  ImageNode.tsx  MentionNode.ts  PollComponent.tsx  PollNode.tsx  StickyComponent.tsx  StickyNode.tsx  TweetNode.tsx  YouTubeNode.tsx
src/editor/server/: validation.ts
src/event/: EventContext.tsx  event.ts
src/extensions/: index.ts
src/settings/: AIChatSettings.tsx  ActionOnStartup.tsx  ImageSettings.tsx  LanguageSettings.tsx  Setting.tsx  SettingsContext.tsx  main.css  main.tsx
(+72 files in other folders)
